[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/godot_ovrmobile/example_scenes/left_hand_model.glb" type="PackedScene" id=1]
[ext_resource path="res://addons/godot_ovrmobile/example_scenes/right_hand_model.glb" type="PackedScene" id=2]
[ext_resource path="res://addons/godot_ovrmobile/example_scenes/ARVROriginWithHandTracking.gd" type="Script" id=3]
[ext_resource path="res://player.gd" type="Script" id=4]

[node name="Player" type="Spatial"]
script = ExtResource( 4 )

[node name="ARVROriginWithHandTracking" type="ARVROrigin" parent="."]
script = ExtResource( 3 )

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROriginWithHandTracking"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72656, 0 )

[node name="LeftHand" type="ARVRController" parent="ARVROriginWithHandTracking"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.132544, 1.65044, -0.301362 )

[node name="left_hand_model" parent="ARVROriginWithHandTracking/LeftHand" instance=ExtResource( 1 )]

[node name="SpawnPoint" type="Position3D" parent="ARVROriginWithHandTracking/LeftHand"]
transform = Transform( 0.05, 0, 0, 0, -0.05, -4.37114e-09, 0, 4.37114e-09, -0.05, 0.0762747, 0.0727907, -0.0109282 )

[node name="RightHand" type="ARVRController" parent="ARVROriginWithHandTracking"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.346606, 1.72656, -0.4 )
controller_id = 2

[node name="right_hand_model" parent="ARVROriginWithHandTracking/RightHand" instance=ExtResource( 2 )]

[node name="SpawnPoint" type="Position3D" parent="ARVROriginWithHandTracking/RightHand"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.0769041, -0.0761887, 0.000594974 )

[node name="RayCast" type="RayCast" parent="ARVROriginWithHandTracking/RightHand"]
enabled = true
cast_to = Vector3( -10, 0, 0 )
[connection signal="left_hand_pinch" from="ARVROriginWithHandTracking" to="." method="_on_ARVROriginWithHandTracking_left_hand_pinch"]
[connection signal="right_hand_pinch" from="ARVROriginWithHandTracking" to="." method="_on_ARVROriginWithHandTracking_right_hand_pinch"]
[connection signal="button_pressed" from="ARVROriginWithHandTracking/LeftHand" to="ARVROriginWithHandTracking" method="_on_LeftHand_pinch_pressed"]
[connection signal="button_pressed" from="ARVROriginWithHandTracking/RightHand" to="ARVROriginWithHandTracking" method="_on_RightHand_pinch_pressed"]
